--- a/t/css/layout.css
+++ b/t/css/layout.css
@@ -47,7 +47,7 @@ a {
 	background-image: linear-gradient( #fff, #fff ), linear-gradient( #fff, #fff ), linear-gradient( currentColor, currentColor );
 	background-repeat: no-repeat, no-repeat, repeat-x;
 	background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-	background-position: 0% 92%, 100% 92%, 0% 92%;
+	background-position: 0% 95%, 100% 95%, 0% 95%;
 }
 
 h1,
@@ -67,6 +67,17 @@ figcaption {
 		Verdana,
 		sans-serif;
 	font-weight: 300;
+}
+
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a,
+time a,
+figcaption a {
+	background-position: 0% 90%, 100% 90%, 0% 90%;
 }
 
 h1,
