--- a/t/css/layout.css
+++ b/t/css/layout.css
@@ -1,32 +1,75 @@
-body {
-	margin-bottom: 10em;
+header {
+	background: #faeaea;
+	height: 100vh;
+	position: relative;
+	margin-bottom: 3em;
 }
 
-article,
-section,
-nav,
-.content {
-	max-width: 30em;
-	margin: 2em auto;
-	padding: 0 1em;
+header > div {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+	right: 0;
 }
 
-article:after,
-section:after {
-	/*content: '\2740\00a0\2740\00a0\2740';*/
-	content: '\2767';
-	margin: 1.5em 0;
-	text-align: center;
-	display: block;
-	font-size: 1.5em;
+nav {
+	background: #faeaea;
+	padding: 1em 0 10em;
+	margin-top: 3em;
 }
 
 p,
+header time,
+nav div,
+ol, ul,
+table,
+h1, h2, h3, h4, h5, h6,
+blockquote {
+	max-width: 660px;
+	margin: 1em auto;
+	padding: 0 1em;
+}
+
+h1 {
+	font-size: 2em;
+	padding: 0 0.5em;
+}
+
+h2 {
+	font-size: 1.5em;
+	padding: 0 0.66666em;
+}
+
+h3 {
+	font-size: 1.2em;
+	padding: 0 0.83333em;
+}
+
+h4, h5, h6 {
+	font-size: 1em;
+}
+
+header p,
+header time {
+	display: block;
+	font-style: italic;
+}
+
 figcaption {
 	margin: 1em 0;
 }
 
+header h1 {
+	padding: 0 0.75em;
+}
+
+header time {
+	padding: 0 2em;
+}
+
 p,
+time,
 li {
 	font-family:
 		"content-serif",
@@ -35,19 +78,19 @@ li {
 		"Times New Roman",
 		Times,
 		serif;
-	/*font-weight: 400;
-	font-style: normal;
-	line-height: 1.58;
-	letter-spacing: -0.003em;*/
 }
 
 a {
 	text-shadow: .03em 0 #fff, -.03em 0 #fff, 0 .03em #fff, 0 -.03em #fff, .06em 0 #fff, -.06em 0 #fff, .09em 0 #fff, -.09em 0 #fff, .12em 0 #fff, -.12em 0 #fff;
 	text-decoration: none;
-	background-image: linear-gradient( #fff, #fff ), linear-gradient( #fff, #fff ), linear-gradient( currentColor, currentColor );
+	background-image: linear-gradient( #fff, #fff ), linear-gradient( #fff, #fff ), linear-gradient(to bottom,currentColor 25%, transparent 25%);
 	background-repeat: no-repeat, no-repeat, repeat-x;
 	background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
 	background-position: 0% 95%, 100% 95%, 0% 95%;
+}
+
+nav a {
+	text-shadow: none;
 }
 
 h1,
@@ -56,7 +99,6 @@ h3,
 h4,
 h5,
 h6,
-time,
 figcaption {
 	font-family:
 		"content-sans",
@@ -66,7 +108,6 @@ figcaption {
 		Geneva,
 		Verdana,
 		sans-serif;
-	font-weight: 300;
 }
 
 h1 a,
@@ -82,63 +123,61 @@ figcaption a {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
 	font-weight: 700;
 }
 
 figcaption {
-    /*letter-spacing: -0.02em;*/
-    /*font-style: normal;*/
     font-feature-settings: "liga" on,"lnum" on;
     -moz-font-feature-settings: "liga" on,"lnum" on;
     -webkit-font-feature-settings: "liga" on,"lnum" on;
-    /*font-size: 14px;*/
-    /*line-height: 1.4;*/
-    /*color: rgba(0,0,0,0.6);*/
-    /*letter-spacing: 0;*/
 }
 
-img {
-	height: auto;
-	max-width: 100%;
-}
-
+img,
 embed,
 iframe,
 object,
 figure {
 	display: block;
 	max-width: 100%;
-	margin: 1em auto;
+	margin: 2em auto;
+}
+
+img {
+	height: auto;
 }
 
 table {
-	margin: 1em 0;
 	width: 100%;
 }
 
 figure img {
-	display: block;
 	margin: 0 auto;
-}
-
-.aligncenter {
-	display: block;
-	margin: 1em auto;
 }
 
 .alignleft {
 	display: inline;
 	float: left;
-	margin: 0.5em 1em 0.5em 0;
+	margin: 0.5em 1em 0.5em;
 	max-width: 50%;
 }
 
 .alignright {
 	display: inline;
 	float: right;
-	margin: 0.5em 0 0.5em 1em;
+	margin: 0.5em 1em 0.5em;
 	max-width: 50%;
+}
+
+p .alignleft {
+	margin-left: 0;
+}
+
+p .alignright {
+	margin-right: 0;
 }
 
 @media screen and ( max-width: 30em ){
@@ -193,14 +232,14 @@ figure img {
 	max-width: 11.11%;
 }
 
-time,
 figcaption {
 	font-size: 0.75em;
-	color: rgba( 0, 0, 0, 0.6 );
+	/*color: #8D7A57;*/
 }
 
-nav {
-	text-align: center;
+header p,
+time {
+	opacity: 0.75;
 }
 
 a {
@@ -247,7 +286,7 @@ pre {
 
 ul,
 ol {
-	padding-left: 1.5em;
+	padding-left: 2.5em;
 }
 
 ul {
@@ -271,7 +310,7 @@ ul > li:before {
 
 #notes ul {
 	list-style: none;
-	padding: 0;
+	padding-left: 1em;
 }
 
 #notes ul > li:before {
